--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0",
     "whatwg-fetch": "^1.0.0"
   }
 }
