--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "raml-1-parser": "^0.2.24"
   },
   "devDependencies": {
+    "kcors": "^1.2.1",
     "koa": "^1.2.0",
     "koa-morgan": "^0.4.0",
     "nodemon": "^1.9.2"
