--- a/example/api/package.json
+++ b/example/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "raml2-to-koa",
   "version": "0.1.0",
-  "description": "RAML 1.0 API defintions to router definitions.",
+  "description": "Simple Todos API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,8 +9,9 @@
   "author": "Julian Mazzitelli <mazzitelli.julian@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "koa-bodyparser": "^2.2.0",
-    "koa-router": "^5.4.0",
-    "raml-1-parser": "^0.2.24"
+    "kcors": "^1.2.1",
+    "koa": "^1.2.0",
+    "koa-morgan": "^0.4.0",
+    "nodemon": "^1.9.2"
   }
 }
