--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "raml2-to-koa",
+  "name": "raml-to-app",
   "version": "0.1.0",
   "description": "RAML 1.0 API defintions to router definitions.",
   "main": "index.js",
