--- a/example/api/package.json
+++ b/example/api/package.json
@@ -4,14 +4,20 @@
   "description": "Simple Todos API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "docker-compose up api"
   },
   "author": "Julian Mazzitelli <mazzitelli.julian@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "kcors": "^1.2.1",
     "koa": "^1.2.0",
+    "koa-bodyparser": "^2.2.0",
     "koa-morgan": "^0.4.0",
+    "koa-router": "^5.4.0",
     "nodemon": "^1.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.10.0"
   }
 }
