basic pg connection

--- a/example/api/docker-compose.yml
+++ b/example/api/docker-compose.yml
@@ -9,4 +9,20 @@ services:
       - API_PORT=$API_PORT
     ports:
       - "$API_PORT:$API_PORT"
+    links:
+      - postgres:postgreshost
     command: ./node_modules/.bin/nodemon api.js
+
+  postgres:
+    image: sameersbn/postgresql:9.4-13
+    ports:
+      - "5432:5432"
+    environment:
+      - DB_USER=$PG_USER
+      - DB_PASS=$PG_PASS
+      - DB_NAME=$PG_DBNAME
+    volumes:
+      - dbdata:/var/lib/postgresql
+
+volumes:
+  dbdata: {}
