--- a/example/api/docker-compose.yml
+++ b/example/api/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - .:/usr/src/app
     environment:
+      - NODE_ENV=development
       - API_PORT=$API_PORT
     ports:
       - "$API_PORT:$API_PORT"
