--- a/example/api/package.json
+++ b/example/api/package.json
@@ -10,7 +10,7 @@
   "author": "Julian Mazzitelli <mazzitelli.julian@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "config": "^1.21.0",
+    "dotenv": "^2.0.0",
     "js-yaml": "^3.6.1",
     "kcors": "^1.2.1",
     "koa": "^1.2.0",
