pg.Pool and true PG env vars

--- a/example/api/.env
+++ b/example/api/.env
@@ -1,7 +1,7 @@
 API_PORT=9000
 API_PG_HOST=pghost
 
-PG_USER=pguser
-PG_PASS=dbpass
-PG_DBNAME=todos
+PGUSER=pguser
+PGPASSWORD=dbpass
+PGDATABASE=todos
 
