--- a/example/api/package.json
+++ b/example/api/package.json
@@ -17,7 +17,8 @@
     "koa-bodyparser": "^2.2.0",
     "koa-morgan": "^0.4.0",
     "koa-router": "^5.4.0",
-    "pg": "^6.0.3"
+    "pg": "^6.0.3",
+    "pg-promise": "^5.2.7"
   },
   "devDependencies": {
     "nodemon": "^1.10.0"
